--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - mvn install
+      - mvn clean install
   post_build:
     commands:
       - echo Build completed on `date`
