--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,6 +2,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2 &
+      - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 160773237740.dkr.ecr.us-east-1.amazonaws.com
